--- a/public/index.html
+++ b/public/index.html
@@ -2,27 +2,55 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>WhatsApp Style Chat</title>
+<title>Chat by Sanchay</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <style>
 :root{
-  --bg:#ece5dd;
+  --bg:#eae6df;
   --header:#075e54;
-  --myMsg:#dcf8c6;
-  --otherMsg:#ffffff;
+  --my:#dcf8c6;
+  --other:#ffffff;
+  --accent:#25d366;
 }
 *{box-sizing:border-box}
 body{
   margin:0;
-  font-family:Segoe UI, Arial;
+  font-family:"Segoe UI", Arial;
   background:var(--bg);
   height:100vh;
-  display:flex;
-  flex-direction:column;
+  overflow:hidden;
 }
 
-/* HEADER */
+/* ============ SPLASH ============ */
+#splash{
+  position:fixed;
+  inset:0;
+  background:linear-gradient(135deg,#075e54,#25d366);
+  color:white;
+  display:flex;
+  flex-direction:column;
+  justify-content:center;
+  align-items:center;
+  z-index:999;
+  animation:fadeOut 1s ease 3s forwards;
+}
+#splash h1{
+  font-size:28px;
+  margin:0;
+  animation:scaleIn 1s ease;
+}
+#splash p{
+  margin-top:10px;
+  font-size:14px;
+  opacity:.9;
+  animation:slideUp 1.2s ease;
+}
+@keyframes fadeOut{to{opacity:0;visibility:hidden}}
+@keyframes scaleIn{from{transform:scale(.7);opacity:0}to{transform:scale(1);opacity:1}}
+@keyframes slideUp{from{transform:translateY(20px);opacity:0}to{transform:translateY(0);opacity:1}}
+
+/* ============ HEADER ============ */
 .header{
   background:var(--header);
   color:white;
@@ -32,59 +60,69 @@ body{
   font-weight:600;
 }
 
-/* USERNAME */
-.username-box{
+/* ============ USERNAME ============ */
+.username{
   padding:8px;
-  background:#f7f7f7;
+  background:#f5f5f5;
 }
-.username-box input{
+.username input{
   width:100%;
   padding:10px;
   border-radius:8px;
   border:1px solid #ccc;
+  outline:none;
 }
 
-/* CHAT AREA */
+/* ============ CHAT AREA ============ */
 .chat{
-  flex:1;
-  padding:10px;
+  height:calc(100vh - 190px);
   overflow-y:auto;
+  padding:10px;
 }
 
-/* MESSAGE COMMON */
+/* ============ MESSAGE ============ */
 .msg{
   max-width:75%;
   padding:8px 12px;
-  margin:6px 0;
-  border-radius:10px;
+  margin:8px 0;
+  border-radius:14px;
   font-size:14px;
-  line-height:1.4;
   word-wrap:break-word;
-  clear:both;
+  opacity:0;
 }
-
-/* LEFT (OTHER USER) */
-.left{
-  background:var(--otherMsg);
-  float:left;
-  border-bottom-left-radius:0;
-}
-
-/* RIGHT (MY MESSAGE) */
-.right{
-  background:var(--myMsg);
-  float:right;
-  border-bottom-right-radius:0;
-}
-
-/* USER NAME */
 .user{
   font-size:11px;
   color:#555;
   margin-bottom:3px;
 }
 
-/* INPUT AREA */
+/* SEND (RIGHT) */
+.right{
+  background:var(--my);
+  margin-left:auto;
+  border-bottom-right-radius:0;
+  animation:sendAnim .35s ease forwards;
+}
+
+/* RECEIVE (LEFT) */
+.left{
+  background:var(--other);
+  margin-right:auto;
+  border-bottom-left-radius:0;
+  animation:receiveAnim .35s ease forwards;
+}
+
+/* ANIMATIONS */
+@keyframes sendAnim{
+  from{transform:translateX(40px) scale(.9);opacity:0}
+  to{transform:translateX(0) scale(1);opacity:1}
+}
+@keyframes receiveAnim{
+  from{transform:translateX(-40px) scale(.9);opacity:0}
+  to{transform:translateX(0) scale(1);opacity:1}
+}
+
+/* ============ INPUT ============ */
 .input-box{
   display:flex;
   padding:10px;
@@ -95,6 +133,7 @@ body{
   padding:10px 15px;
   border-radius:25px;
   border:1px solid #ccc;
+  outline:none;
 }
 .input-box button{
   margin-left:8px;
@@ -102,18 +141,36 @@ body{
   height:45px;
   border:none;
   border-radius:50%;
-  background:#25d366;
+  background:var(--accent);
   color:white;
   font-size:18px;
+  transition:.2s;
+}
+.input-box button:active{
+  transform:scale(.9);
+}
+
+/* ============ FOOTER ============ */
+.footer{
+  text-align:center;
+  font-size:12px;
+  color:#555;
+  padding:6px;
 }
 </style>
 </head>
 
 <body>
 
-<div class="header">💬 Chat App</div>
+<!-- SPLASH -->
+<div id="splash">
+  <h1>💬 Chat App</h1>
+  <p>Developed by <b>Sanchay Dutt</b></p>
+</div>
 
-<div class="username-box">
+<div class="header">Chat by Sanchay</div>
+
+<div class="username">
   <input id="username" placeholder="Enter your name">
 </div>
 
@@ -124,38 +181,33 @@ body{
   <button id="send">➤</button>
 </div>
 
+<div class="footer">Developed by Sanchay Dutt</div>
+
 <script src="/socket.io/socket.io.js"></script>
 <script>
 const socket = io();
 const chat = document.getElementById("chat");
 
 document.getElementById("send").onclick = send;
-document.getElementById("message").addEventListener("keypress", e=>{
+document.getElementById("message").addEventListener("keypress",e=>{
   if(e.key==="Enter") send();
 });
 
 function send(){
   const user = username.value.trim();
-  const msg = message.value.trim();
+  const msg  = message.value.trim();
   if(!user || !msg) return;
 
   socket.emit("sendMessage",{user,message:msg});
   message.value="";
 }
 
-socket.on("receiveMessage", data=>{
-  const div = document.createElement("div");
-
-  // MY message = RIGHT | OTHER = LEFT
-  div.className = "msg " + (data.user===username.value ? "right":"left");
-
-  div.innerHTML = `
-    <div class="user">${data.user}</div>
-    <div>${data.message}</div>
-  `;
-
+socket.on("receiveMessage",data=>{
+  const div=document.createElement("div");
+  div.className="msg "+(data.user===username.value?"right":"left");
+  div.innerHTML=`<div class="user">${data.user}</div>${data.message}`;
   chat.appendChild(div);
-  chat.scrollTop = chat.scrollHeight;
+  chat.scrollTop=chat.scrollHeight;
 });
 </script>
 
