--- a/public/index.html
+++ b/public/index.html
@@ -7,12 +7,11 @@
 
 <style>
 :root{
-  --bg:#efeae2;
+  --bg:#eae6df;
   --header:#075e54;
   --my:#dcf8c6;
   --other:#ffffff;
   --accent:#25d366;
-  --text:#222;
 }
 *{box-sizing:border-box}
 body{
@@ -23,7 +22,7 @@ body{
   overflow:hidden;
 }
 
-/* ===== SPLASH ===== */
+/* ============ SPLASH ============ */
 #splash{
   position:fixed;
   inset:0;
@@ -36,11 +35,22 @@ body{
   z-index:999;
   animation:fadeOut 1s ease 3s forwards;
 }
-#splash h1{font-size:28px;margin:0}
-#splash p{margin-top:10px;font-size:14px;opacity:.9}
+#splash h1{
+  font-size:28px;
+  margin:0;
+  animation:scaleIn 1s ease;
+}
+#splash p{
+  margin-top:10px;
+  font-size:14px;
+  opacity:.9;
+  animation:slideUp 1.2s ease;
+}
 @keyframes fadeOut{to{opacity:0;visibility:hidden}}
+@keyframes scaleIn{from{transform:scale(.7);opacity:0}to{transform:scale(1);opacity:1}}
+@keyframes slideUp{from{transform:translateY(20px);opacity:0}to{transform:translateY(0);opacity:1}}
 
-/* ===== HEADER ===== */
+/* ============ HEADER ============ */
 .header{
   background:var(--header);
   color:white;
@@ -50,33 +60,34 @@ body{
   font-weight:600;
 }
 
-/* ===== USERNAME ===== */
+/* ============ USERNAME ============ */
 .username{
   padding:8px;
-  background:#f6f6f6;
+  background:#f5f5f5;
 }
 .username input{
   width:100%;
   padding:10px;
   border-radius:8px;
   border:1px solid #ccc;
+  outline:none;
 }
 
-/* ===== CHAT ===== */
+/* ============ CHAT AREA ============ */
 .chat{
   height:calc(100vh - 190px);
   overflow-y:auto;
   padding:10px;
 }
 
-/* ===== MESSAGE ===== */
+/* ============ MESSAGE ============ */
 .msg{
   max-width:75%;
   padding:8px 12px;
   margin:8px 0;
   border-radius:14px;
   font-size:14px;
-  color:var(--text);
+  word-wrap:break-word;
   opacity:0;
 }
 .user{
@@ -85,7 +96,7 @@ body{
   margin-bottom:3px;
 }
 
-/* RIGHT (SEND) */
+/* SEND (RIGHT) */
 .right{
   background:var(--my);
   margin-left:auto;
@@ -93,7 +104,7 @@ body{
   animation:sendAnim .35s ease forwards;
 }
 
-/* LEFT (RECEIVE) */
+/* RECEIVE (LEFT) */
 .left{
   background:var(--other);
   margin-right:auto;
@@ -111,7 +122,7 @@ body{
   to{transform:translateX(0) scale(1);opacity:1}
 }
 
-/* ===== INPUT ===== */
+/* ============ INPUT ============ */
 .input-box{
   display:flex;
   padding:10px;
@@ -122,6 +133,7 @@ body{
   padding:10px 15px;
   border-radius:25px;
   border:1px solid #ccc;
+  outline:none;
 }
 .input-box button{
   margin-left:8px;
@@ -132,14 +144,17 @@ body{
   background:var(--accent);
   color:white;
   font-size:18px;
+  transition:.2s;
 }
-.input-box button:active{transform:scale(.9)}
+.input-box button:active{
+  transform:scale(.9);
+}
 
-/* ===== FOOTER ===== */
+/* ============ FOOTER ============ */
 .footer{
   text-align:center;
   font-size:12px;
-  color:#666;
+  color:#555;
   padding:6px;
 }
 </style>
@@ -168,16 +183,10 @@ body{
 
 <div class="footer">Developed by Sanchay Dutt</div>
 
-<!-- 🔊 SOUND FILES -->
-<audio id="sendSound" src="send.mp3"></audio>
-<audio id="receiveSound" src="receive.mp3"></audio>
-
 <script src="/socket.io/socket.io.js"></script>
 <script>
 const socket = io();
 const chat = document.getElementById("chat");
-const sendSound = document.getElementById("sendSound");
-const receiveSound = document.getElementById("receiveSound");
 
 document.getElementById("send").onclick = send;
 document.getElementById("message").addEventListener("keypress",e=>{
@@ -190,25 +199,15 @@ function send(){
   if(!user || !msg) return;
 
   socket.emit("sendMessage",{user,message:msg});
-  sendSound.currentTime = 0;
-  sendSound.play();
-
   message.value="";
 }
 
 socket.on("receiveMessage",data=>{
   const div=document.createElement("div");
-  const mine = data.user===username.value;
-
-  div.className="msg "+(mine?"right":"left");
+  div.className="msg "+(data.user===username.value?"right":"left");
   div.innerHTML=`<div class="user">${data.user}</div>${data.message}`;
   chat.appendChild(div);
   chat.scrollTop=chat.scrollHeight;
-
-  if(!mine){
-    receiveSound.currentTime = 0;
-    receiveSound.play();
-  }
 });
 </script>
 
