--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@ body{
   overflow:hidden;
 }
 
-/* ============ SPLASH ============ */
+/* SPLASH */
 #splash{
   position:fixed;
   inset:0;
@@ -35,22 +35,11 @@ body{
   z-index:999;
   animation:fadeOut 1s ease 3s forwards;
 }
-#splash h1{
-  font-size:28px;
-  margin:0;
-  animation:scaleIn 1s ease;
-}
-#splash p{
-  margin-top:10px;
-  font-size:14px;
-  opacity:.9;
-  animation:slideUp 1.2s ease;
-}
+#splash h1{font-size:28px;margin:0}
+#splash p{margin-top:10px;font-size:14px;opacity:.9}
 @keyframes fadeOut{to{opacity:0;visibility:hidden}}
-@keyframes scaleIn{from{transform:scale(.7);opacity:0}to{transform:scale(1);opacity:1}}
-@keyframes slideUp{from{transform:translateY(20px);opacity:0}to{transform:translateY(0);opacity:1}}
 
-/* ============ HEADER ============ */
+/* HEADER */
 .header{
   background:var(--header);
   color:white;
@@ -60,7 +49,7 @@ body{
   font-weight:600;
 }
 
-/* ============ USERNAME ============ */
+/* USERNAME */
 .username{
   padding:8px;
   background:#f5f5f5;
@@ -70,17 +59,16 @@ body{
   padding:10px;
   border-radius:8px;
   border:1px solid #ccc;
-  outline:none;
 }
 
-/* ============ CHAT AREA ============ */
+/* CHAT */
 .chat{
   height:calc(100vh - 190px);
   overflow-y:auto;
   padding:10px;
 }
 
-/* ============ MESSAGE ============ */
+/* MESSAGE */
 .msg{
   max-width:75%;
   padding:8px 12px;
@@ -95,24 +83,18 @@ body{
   color:#555;
   margin-bottom:3px;
 }
-
-/* SEND (RIGHT) */
 .right{
   background:var(--my);
   margin-left:auto;
   border-bottom-right-radius:0;
   animation:sendAnim .35s ease forwards;
 }
-
-/* RECEIVE (LEFT) */
 .left{
   background:var(--other);
   margin-right:auto;
   border-bottom-left-radius:0;
   animation:receiveAnim .35s ease forwards;
 }
-
-/* ANIMATIONS */
 @keyframes sendAnim{
   from{transform:translateX(40px) scale(.9);opacity:0}
   to{transform:translateX(0) scale(1);opacity:1}
@@ -122,7 +104,7 @@ body{
   to{transform:translateX(0) scale(1);opacity:1}
 }
 
-/* ============ INPUT ============ */
+/* INPUT */
 .input-box{
   display:flex;
   padding:10px;
@@ -133,7 +115,6 @@ body{
   padding:10px 15px;
   border-radius:25px;
   border:1px solid #ccc;
-  outline:none;
 }
 .input-box button{
   margin-left:8px;
@@ -144,13 +125,9 @@ body{
   background:var(--accent);
   color:white;
   font-size:18px;
-  transition:.2s;
 }
-.input-box button:active{
-  transform:scale(.9);
-}
+.input-box button:active{transform:scale(.9)}
 
-/* ============ FOOTER ============ */
 .footer{
   text-align:center;
   font-size:12px;
@@ -162,7 +139,6 @@ body{
 
 <body>
 
-<!-- SPLASH -->
 <div id="splash">
   <h1>💬 Chat App</h1>
   <p>Developed by <b>Sanchay Dutt</b></p>
@@ -183,10 +159,16 @@ body{
 
 <div class="footer">Developed by Sanchay Dutt</div>
 
+<!-- 🔊 SOUND FILES -->
+<audio id="sendSound" src="send.mp3"></audio>
+<audio id="receiveSound" src="receive.mp3"></audio>
+
 <script src="/socket.io/socket.io.js"></script>
 <script>
 const socket = io();
 const chat = document.getElementById("chat");
+const sendSound = document.getElementById("sendSound");
+const receiveSound = document.getElementById("receiveSound");
 
 document.getElementById("send").onclick = send;
 document.getElementById("message").addEventListener("keypress",e=>{
@@ -199,15 +181,26 @@ function send(){
   if(!user || !msg) return;
 
   socket.emit("sendMessage",{user,message:msg});
+
+  sendSound.currentTime = 0;
+  sendSound.play();
+
   message.value="";
 }
 
 socket.on("receiveMessage",data=>{
   const div=document.createElement("div");
-  div.className="msg "+(data.user===username.value?"right":"left");
+  const mine = data.user === username.value;
+
+  div.className="msg "+(mine?"right":"left");
   div.innerHTML=`<div class="user">${data.user}</div>${data.message}`;
   chat.appendChild(div);
   chat.scrollTop=chat.scrollHeight;
+
+  if(!mine){
+    receiveSound.currentTime = 0;
+    receiveSound.play();
+  }
 });
 </script>
 
