--- a/public/index.html
+++ b/public/index.html
@@ -33,13 +33,10 @@ body{
   justify-content:center;
   align-items:center;
   z-index:999;
-  animation:fadeOut 1s ease 3s forwards;
+  animation:fadeOut 1s ease 2.5s forwards;
 }
-#splash h1{font-size:28px;margin:0}
-#splash p{margin-top:10px;font-size:14px;opacity:.9}
 @keyframes fadeOut{to{opacity:0;visibility:hidden}}
 
-/* HEADER */
 .header{
   background:var(--header);
   color:white;
@@ -48,113 +45,61 @@ body{
   font-size:18px;
   font-weight:600;
 }
-
-/* USERNAME */
-.username{
-  padding:8px;
-  background:#f5f5f5;
-}
+.username{padding:8px;background:#f5f5f5}
 .username input{
-  width:100%;
-  padding:10px;
-  border-radius:8px;
-  border:1px solid #ccc;
+  width:100%;padding:10px;border-radius:8px;border:1px solid #ccc;
 }
-
-/* CHAT */
 .chat{
   height:calc(100vh - 190px);
   overflow-y:auto;
   padding:10px;
 }
-
-/* MESSAGE */
 .msg{
   max-width:75%;
   padding:8px 12px;
   margin:8px 0;
   border-radius:14px;
   font-size:14px;
-  word-wrap:break-word;
   opacity:0;
 }
-.user{
-  font-size:11px;
-  color:#555;
-  margin-bottom:3px;
-}
+.user{font-size:11px;color:#555;margin-bottom:3px}
 .right{
   background:var(--my);
   margin-left:auto;
   border-bottom-right-radius:0;
-  animation:sendAnim .35s ease forwards;
+  animation:sendAnim .3s ease forwards;
 }
 .left{
   background:var(--other);
   margin-right:auto;
   border-bottom-left-radius:0;
-  animation:receiveAnim .35s ease forwards;
+  animation:receiveAnim .3s ease forwards;
 }
-@keyframes sendAnim{
-  from{transform:translateX(40px) scale(.9);opacity:0}
-  to{transform:translateX(0) scale(1);opacity:1}
-}
-@keyframes receiveAnim{
-  from{transform:translateX(-40px) scale(.9);opacity:0}
-  to{transform:translateX(0) scale(1);opacity:1}
-}
+@keyframes sendAnim{from{transform:translateX(40px);opacity:0}to{transform:none;opacity:1}}
+@keyframes receiveAnim{from{transform:translateX(-40px);opacity:0}to{transform:none;opacity:1}}
 
-/* TICKS (MINIMAL – UI SAME) */
-.tick{
-  font-size:11px;
-  margin-left:6px;
-  color:#777;
-}
-.seen{
-  color:#2196f3; /* BLUE TICK */
-}
-.tick-box{
-  text-align:right;
-  margin-top:2px;
-}
+.tick{font-size:11px;color:#777}
+.seen{color:#2196f3}
+.tick-box{text-align:right;margin-top:2px}
 
-/* INPUT */
 .input-box{
-  display:flex;
-  padding:10px;
-  background:#f0f0f0;
+  display:flex;padding:10px;background:#f0f0f0
 }
 .input-box input{
-  flex:1;
-  padding:10px 15px;
-  border-radius:25px;
-  border:1px solid #ccc;
+  flex:1;padding:10px 15px;border-radius:25px;border:1px solid #ccc
 }
 .input-box button{
-  margin-left:8px;
-  width:45px;
-  height:45px;
-  border:none;
-  border-radius:50%;
-  background:var(--accent);
-  color:white;
-  font-size:18px;
+  margin-left:8px;width:45px;height:45px;border:none;
+  border-radius:50%;background:var(--accent);color:white;font-size:18px
 }
-.input-box button:active{transform:scale(.9)}
-
-.footer{
-  text-align:center;
-  font-size:12px;
-  color:#555;
-  padding:6px;
-}
+.footer{text-align:center;font-size:12px;color:#555;padding:6px}
 </style>
 </head>
 
 <body>
 
 <div id="splash">
-  <h1>💬 Chat App</h1>
+  <h2>Chat App</h2>
   <p>Developed by <b>Sanchay Dutt</b></p>
 </div>
 
@@ -177,14 +122,35 @@ body{
 <script>
 const socket = io();
 const chat = document.getElementById("chat");
+const usernameInput = document.getElementById("username");
+
+// 🔹 RESTORE USERNAME
+usernameInput.value = localStorage.getItem("username") || "";
+usernameInput.oninput = () => {
+  localStorage.setItem("username", usernameInput.value);
+};
+
+// 🔹 RESTORE CHAT
+const savedChat = JSON.parse(localStorage.getItem("chatHistory") || "[]");
+savedChat.forEach(html => {
+  const div = document.createElement("div");
+  div.innerHTML = html;
+  chat.appendChild(div.firstChild);
+});
+setTimeout(()=>chat.scrollTop = chat.scrollHeight, 100);
 
 document.getElementById("send").onclick = send;
 document.getElementById("message").addEventListener("keypress",e=>{
   if(e.key==="Enter") send();
 });
 
+function saveChat(){
+  const msgs = [...chat.children].map(m => m.outerHTML);
+  localStorage.setItem("chatHistory", JSON.stringify(msgs));
+}
+
 function send(){
-  const user = username.value.trim();
+  const user = usernameInput.value.trim();
   const msg  = message.value.trim();
   if(!user || !msg) return;
 
@@ -193,33 +159,28 @@ function send(){
 }
 
 socket.on("receiveMessage",data=>{
-  const mine = data.user === username.value;
+  const mine = data.user === usernameInput.value;
   const div = document.createElement("div");
-
-  div.className = "msg " + (mine ? "right" : "left");
+  div.className = "msg " + (mine?"right":"left");
   div.setAttribute("data-id", data.id);
 
   div.innerHTML = `
     <div class="user">${data.user}</div>
     <div>${data.message}</div>
-    ${mine ? `<div class="tick-box">
+    ${mine?`<div class="tick-box">
       <span class="tick" id="tick-${data.id}">✔✔</span>
-    </div>` : ``}
+    </div>`:""}
   `;
-
   chat.appendChild(div);
   chat.scrollTop = chat.scrollHeight;
+  saveChat();
 
-  if(!mine){
-    socket.emit("messageSeen", data.id);
-  }
+  if(!mine) socket.emit("messageSeen", data.id);
 });
 
-socket.on("messageSeenUpdate", (msgId) => {
-  const tick = document.getElementById("tick-" + msgId);
-  if(tick){
-    tick.classList.add("seen"); // BLUE ✔✔
-  }
+socket.on("messageSeenUpdate",id=>{
+  const t=document.getElementById("tick-"+id);
+  if(t){t.classList.add("seen");saveChat();}
 });
 </script>
 
