--- a/public/index.html
+++ b/public/index.html
@@ -6,107 +6,37 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <style>
+/* 🔹 SAME UI (unchanged) */
 :root{
-  --bg:#eae6df;
-  --header:#075e54;
-  --my:#dcf8c6;
-  --other:#ffffff;
-  --accent:#25d366;
+  --bg:#eae6df;--header:#075e54;--my:#dcf8c6;
+  --other:#ffffff;--accent:#25d366;
 }
 *{box-sizing:border-box}
-body{
-  margin:0;
-  font-family:"Segoe UI", Arial;
-  background:var(--bg);
-  height:100vh;
-  overflow:hidden;
-}
-
-/* SPLASH */
-#splash{
-  position:fixed;
-  inset:0;
-  background:linear-gradient(135deg,#075e54,#25d366);
-  color:white;
-  display:flex;
-  flex-direction:column;
-  justify-content:center;
-  align-items:center;
-  z-index:999;
-  animation:fadeOut 1s ease 2.5s forwards;
-}
-@keyframes fadeOut{to{opacity:0;visibility:hidden}}
-
-.header{
-  background:var(--header);
-  color:white;
-  padding:14px;
-  text-align:center;
-  font-size:18px;
-  font-weight:600;
-}
+body{margin:0;font-family:Segoe UI;background:var(--bg);height:100vh;overflow:hidden}
+.header{background:var(--header);color:white;padding:14px;text-align:center}
 .username{padding:8px;background:#f5f5f5}
-.username input{
-  width:100%;padding:10px;border-radius:8px;border:1px solid #ccc;
-}
-.chat{
-  height:calc(100vh - 190px);
-  overflow-y:auto;
-  padding:10px;
-}
-.msg{
-  max-width:75%;
-  padding:8px 12px;
-  margin:8px 0;
-  border-radius:14px;
-  font-size:14px;
-  opacity:0;
-}
+.username input{width:100%;padding:10px;margin-bottom:6px;border-radius:8px;border:1px solid #ccc}
+.chat{height:calc(100vh - 230px);overflow-y:auto;padding:10px}
+.msg{max-width:75%;padding:8px 12px;margin:8px 0;border-radius:14px;font-size:14px;opacity:0}
 .user{font-size:11px;color:#555;margin-bottom:3px}
-.right{
-  background:var(--my);
-  margin-left:auto;
-  border-bottom-right-radius:0;
-  animation:sendAnim .3s ease forwards;
-}
-.left{
-  background:var(--other);
-  margin-right:auto;
-  border-bottom-left-radius:0;
-  animation:receiveAnim .3s ease forwards;
-}
-@keyframes sendAnim{from{transform:translateX(40px);opacity:0}to{transform:none;opacity:1}}
-@keyframes receiveAnim{from{transform:translateX(-40px);opacity:0}to{transform:none;opacity:1}}
-
-.tick{font-size:11px;color:#777}
-.seen{color:#2196f3}
-.tick-box{text-align:right;margin-top:2px}
-
-.input-box{
-  display:flex;padding:10px;background:#f0f0f0
-}
-.input-box input{
-  flex:1;padding:10px 15px;border-radius:25px;border:1px solid #ccc
-}
-.input-box button{
-  margin-left:8px;width:45px;height:45px;border:none;
-  border-radius:50%;background:var(--accent);color:white;font-size:18px
-}
-.footer{text-align:center;font-size:12px;color:#555;padding:6px}
+.right{background:var(--my);margin-left:auto;border-bottom-right-radius:0;animation:send .3s forwards}
+.left{background:var(--other);margin-right:auto;border-bottom-left-radius:0;animation:recv .3s forwards}
+@keyframes send{from{transform:translateX(40px);opacity:0}to{opacity:1}}
+@keyframes recv{from{transform:translateX(-40px);opacity:0}to{opacity:1}}
+.tick{font-size:11px;color:#777}.seen{color:#2196f3}
+.input-box{display:flex;padding:10px;background:#f0f0f0}
+.input-box input{flex:1;padding:10px;border-radius:25px;border:1px solid #ccc}
+.input-box button{margin-left:8px;width:45px;height:45px;border:none;border-radius:50%;background:var(--accent);color:white}
 </style>
 </head>
 
 <body>
 
-<div id="splash">
-  <h2>Chat App</h2>
-  <p>Developed by <b>Sanchay Dutt</b></p>
-</div>
-
-<div class="header">Chat by Sanchay</div>
+<div class="header">Private Chat</div>
 
 <div class="username">
-  <input id="username" placeholder="Enter your name">
+  <input id="username" placeholder="Your name">
+  <input id="friend" placeholder="Friend name">
 </div>
 
 <div id="chat" class="chat"></div>
@@ -116,71 +46,62 @@ body{
   <button id="send">➤</button>
 </div>
 
-<div class="footer">Developed by Sanchay Dutt</div>
-
 <script src="/socket.io/socket.io.js"></script>
 <script>
 const socket = io();
 const chat = document.getElementById("chat");
-const usernameInput = document.getElementById("username");
+const userInput = document.getElementById("username");
+const friendInput = document.getElementById("friend");
 
-// 🔹 RESTORE USERNAME
-usernameInput.value = localStorage.getItem("username") || "";
-usernameInput.oninput = () => {
-  localStorage.setItem("username", usernameInput.value);
-};
-
-// 🔹 RESTORE CHAT
-const savedChat = JSON.parse(localStorage.getItem("chatHistory") || "[]");
-savedChat.forEach(html => {
-  const div = document.createElement("div");
-  div.innerHTML = html;
-  chat.appendChild(div.firstChild);
-});
-setTimeout(()=>chat.scrollTop = chat.scrollHeight, 100);
+// JOIN ROOM WHEN BOTH NAMES ENTERED
+function joinRoom(){
+  if(userInput.value && friendInput.value){
+    socket.emit("joinRoom",{
+      user:userInput.value,
+      friend:friendInput.value
+    });
+  }
+}
+userInput.onblur = joinRoom;
+friendInput.onblur = joinRoom;
 
 document.getElementById("send").onclick = send;
-document.getElementById("message").addEventListener("keypress",e=>{
-  if(e.key==="Enter") send();
-});
-
-function saveChat(){
-  const msgs = [...chat.children].map(m => m.outerHTML);
-  localStorage.setItem("chatHistory", JSON.stringify(msgs));
-}
 
 function send(){
-  const user = usernameInput.value.trim();
-  const msg  = message.value.trim();
-  if(!user || !msg) return;
+  const user = userInput.value.trim();
+  const friend = friendInput.value.trim();
+  const msg = message.value.trim();
+  if(!user || !friend || !msg) return;
 
-  socket.emit("sendMessage",{user,message:msg});
+  socket.emit("sendMessage",{user,friend,message:msg});
   message.value="";
 }
 
 socket.on("receiveMessage",data=>{
-  const mine = data.user === usernameInput.value;
+  const mine = data.user === userInput.value;
   const div = document.createElement("div");
   div.className = "msg " + (mine?"right":"left");
-  div.setAttribute("data-id", data.id);
-
+  div.setAttribute("data-id",data.id);
   div.innerHTML = `
     <div class="user">${data.user}</div>
     <div>${data.message}</div>
-    ${mine?`<div class="tick-box">
-      <span class="tick" id="tick-${data.id}">✔✔</span>
-    </div>`:""}
+    ${mine?`<span class="tick" id="t${data.id}">✔✔</span>`:""}
   `;
   chat.appendChild(div);
   chat.scrollTop = chat.scrollHeight;
-  saveChat();
 
-  if(!mine) socket.emit("messageSeen", data.id);
+  if(!mine){
+    socket.emit("messageSeen",{
+      msgId:data.id,
+      user:userInput.value,
+      friend:friendInput.value
+    });
+  }
 });
 
 socket.on("messageSeenUpdate",id=>{
-  const t=document.getElementById("tick-"+id);
-  if(t){t.classList.add("seen");saveChat();}
+  const t=document.getElementById("t"+id);
+  if(t) t.classList.add("seen");
 });
 </script>
 
