--- a/public/login.html
+++ b/public/login.html
@@ -1,1 +1,17 @@
+<!DOCTYPE html>
+<html>
+<body>
+<h2>Login</h2>
+<input id="uid" placeholder="User ID"><br>
+<input id="pwd" type="password" placeholder="Password"><br>
+<button onclick="login()">Login</button>
 
+<script>
+function login(){
+  localStorage.setItem("uid", uid.value);
+  localStorage.setItem("pwd", pwd.value);
+  location.href="chats.html";
+}
+</script>
+</body>
+</html>
