--- a/public/index.html
+++ b/public/index.html
@@ -47,7 +47,7 @@ body{
 
 /* LOGIN */
 .login{
-  padding:10px;
+  padding:8px;
   background:#f5f5f5;
 }
 .login input{
@@ -60,27 +60,38 @@ body{
 
 /* CHAT */
 .chat{
-  height:calc(100vh - 260px);
+  height:calc(100vh - 280px);
   overflow-y:auto;
   padding:10px;
 }
+
+/* MESSAGE */
 .msg{
   max-width:75%;
   padding:8px 12px;
   margin:8px 0;
   border-radius:14px;
   font-size:14px;
-  animation:.3s fadeIn;
 }
-@keyframes fadeIn{from{opacity:0;transform:translateY(10px)}to{opacity:1}}
-
+.sender{
+  font-size:11px;
+  color:#555;
+  margin-bottom:2px;
+}
 .right{
   background:var(--my);
   margin-left:auto;
+  border-bottom-right-radius:0;
 }
 .left{
   background:var(--other);
   margin-right:auto;
+  border-bottom-left-radius:0;
+}
+.tick{
+  font-size:11px;
+  color:#777;
+  text-align:right;
 }
 
 /* INPUT */
@@ -104,7 +115,6 @@ body{
   color:white;
   font-size:18px;
 }
-
 .footer{
   text-align:center;
   font-size:12px;
@@ -123,9 +133,9 @@ body{
 <div class="header">Private Chat</div>
 
 <div class="login">
-  <input id="userId" placeholder="User ID">
-  <input id="password" type="password" placeholder="Password">
-  <button onclick="login()">Login</button>
+  <input id="room" placeholder="Room ID (same for both)">
+  <input id="username" placeholder="Your Name">
+  <button onclick="login()">Join Chat</button>
 </div>
 
 <div id="chat" class="chat"></div>
@@ -147,41 +157,35 @@ const chat = document.getElementById("chat");
 const sendSound = document.getElementById("sendSound");
 const receiveSound = document.getElementById("receiveSound");
 
-let USER = "", PASS = "";
+let ROOM = "", USER = "";
 
 function login(){
-  USER = userId.value.trim();
-  PASS = password.value.trim();
-  if(!USER || !PASS) return alert("Enter ID & Password");
+  ROOM = room.value.trim();
+  USER = username.value.trim();
+  if(!ROOM || !USER) return alert("Enter room & name");
 
-  localStorage.setItem("uid", USER);
-  localStorage.setItem("pwd", PASS);
-
-  socket.emit("joinRoom",{userId:USER,password:PASS});
+  socket.emit("joinRoom",{room:ROOM});
 }
 
-// auto login if saved
-if(localStorage.getItem("uid")){
-  USER = localStorage.getItem("uid");
-  PASS = localStorage.getItem("pwd");
-  socket.emit("joinRoom",{userId:USER,password:PASS});
-}
-
-function addMsg(text, mine){
+function addMsg(name,text,mine){
   const d=document.createElement("div");
   d.className="msg "+(mine?"right":"left");
-  d.innerText=text;
+  d.innerHTML=`
+    <div class="sender">${name}</div>
+    <div>${text}</div>
+    ${mine?`<div class="tick">✔✔</div>`:""}
+  `;
   chat.appendChild(d);
   chat.scrollTop=chat.scrollHeight;
 }
 
 function send(){
-  if(!USER) return alert("Login first");
+  if(!ROOM) return alert("Join chat first");
   if(!message.value) return;
 
   socket.emit("sendMessage",{
-    userId:USER,
-    password:PASS,
+    room:ROOM,
+    user:USER,
     message:message.value
   });
 
@@ -189,15 +193,15 @@ function send(){
   message.value="";
 }
 
-socket.on("loadOldMessages", msgs=>{
+socket.on("loadOldMessages",msgs=>{
   chat.innerHTML="";
   msgs.forEach(m=>{
-    addMsg(m.text, m.user===USER);
+    addMsg(m.user,m.text,m.user===USER);
   });
 });
 
-socket.on("receiveMessage", m=>{
-  addMsg(m.text, m.user===USER);
+socket.on("receiveMessage",m=>{
+  addMsg(m.user,m.text,m.user===USER);
   if(m.user!==USER) receiveSound.play();
 });
 </script>
